# my-claude-marketplace

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  book.toml  build-book.sh  generate-summary.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: deploy-book.yml
plugins/agentic-systems/: README.md
plugins/agentic-systems/.claude-plugin/: plugin.json
plugins/agentic-systems/.codex-plugin/: plugin.json
plugins/agentic-systems/skills/agent-communication/: SKILL.md
plugins/agentic-systems/skills/agent-decomposition/: SKILL.md
plugins/agentic-systems/skills/agent-observability/: SKILL.md
plugins/agentic-systems/skills/agent-state/: SKILL.md
plugins/agentic-systems/skills/plan-agentic-system/: SKILL.md
plugins/agentic-systems/skills/tool-design/: SKILL.md
plugins/bevy/: README.md
plugins/bevy/.claude-plugin/: plugin.json
plugins/bevy/.codex-plugin/: plugin.json
plugins/bevy/skills/bevy-ecosystem/: SKILL.md
plugins/bevy/skills/bevy-ecs/: SKILL.md
plugins/bevy/skills/bevy-input-and-interaction/: SKILL.md
plugins/bevy/skills/bevy-physics/: SKILL.md
plugins/bevy/skills/bevy-project-setup/: SKILL.md
plugins/bevy/skills/bevy-rendering/: SKILL.md
plugins/bevy/skills/bevy-ui-and-audio/: SKILL.md
plugins/claude-workflow/: README.md
plugins/claude-workflow/.claude-plugin/: plugin.json
plugins/claude-workflow/.codex-plugin/: plugin.json
plugins/claude-workflow/skills/finish/: SKILL.md
plugins/claude-workflow/skills/soft-harness-create/: SKILL.md
plugins/claude-workflow/skills/soft-harness-run/: SKILL.md
plugins/dwind/: README.md
plugins/dwind/.claude-plugin/: plugin.json
plugins/dwind/.codex-plugin/: plugin.json
plugins/dwind/skills/dwind-component/: SKILL.md
plugins/dwind/skills/dwind-design-system/: SKILL.md
plugins/dwind/skills/dwind-events/: SKILL.md
plugins/dwind/skills/dwind-project-setup/: SKILL.md
plugins/dwind/skills/dwind-reactivity/: SKILL.md
plugins/dwind/skills/dwind-styling/: SKILL.md
plugins/dwind/skills/dwind-tauri/: SKILL.md
plugins/dwind/skills/dwind-testing/: SKILL.md
plugins/ras/: README.md
plugins/ras/.claude-plugin/: plugin.json
plugins/ras/.codex-plugin/: plugin.json
plugins/ras/skills/ras-api-design/: SKILL.md
plugins/ras/skills/ras-best-practices/: SKILL.md
plugins/ras/skills/ras-security/: SKILL.md
plugins/ras/skills/ras-setup/: SKILL.md
plugins/rust-architecture/: README.md
plugins/rust-architecture/.claude-plugin/: plugin.json
plugins/rust-architecture/.codex-plugin/: plugin.json
plugins/rust-architecture/agents/: rust-design-agent.md
plugins/rust-architecture/skills/rust-architecture/: SKILL.md
plugins/rust-architecture/skills/rust-ci-tooling/: SKILL.md
plugins/rust-architecture/skills/rust-project-setup/: SKILL.md
plugins/rust-architecture/skills/rust-testing/: SKILL.md
plugins/scaffold/: README.md
plugins/scaffold/.claude-plugin/: plugin.json
plugins/scaffold/.codex-plugin/: plugin.json
plugins/scaffold/skills/scaffold-desktop/template/: .gitignore  Cargo.toml  justfile
plugins/scaffold/skills/scaffold-desktop/template/.github/workflows/: ci.yml
plugins/scaffold/skills/scaffold-desktop/template/crates/app/: Cargo.toml  Trunk.toml
plugins/scaffold/skills/scaffold-desktop/template/crates/app-adapters/: Cargo.toml
plugins/scaffold/skills/scaffold-desktop/template/crates/app-adapters/src/: in_memory.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app-core/: Cargo.toml
plugins/scaffold/skills/scaffold-desktop/template/crates/app-core/src/: dto.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app-core/src/domain/: mod.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app-tauri/: Cargo.toml  tauri.conf.json
plugins/scaffold/skills/scaffold-desktop/template/crates/app-tauri/src/: commands.rs  main.rs  state.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app-testutils/: Cargo.toml
plugins/scaffold/skills/scaffold-desktop/template/crates/app-testutils/src/: fakes.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app/public/: index.html
plugins/scaffold/skills/scaffold-desktop/template/crates/app/src/: lib.rs  tauri_ipc.rs  types.rs
plugins/scaffold/skills/scaffold-desktop/template/crates/app/src/components/: app.rs  items.rs  mod.rs  state.rs
plugins/scaffold/skills/scaffold-fullstack/template/: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  justfile  nginx.conf
plugins/scaffold/skills/scaffold-fullstack/template/.github/workflows/: ci.yml
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-api/: Cargo.toml
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-api/src/: endpoints.rs  lib.rs  types.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-core/src/: dto.rs  error.rs  lib.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-core/src/ports/: mod.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-frontend/: Cargo.toml
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-frontend/src/: lib.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-frontend/src/components/: app.rs  http.rs  items.rs  login.rs  mod.rs  state.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-frontend/tests/: components.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-service/: Cargo.toml
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-service/src/: handlers.rs  main.rs
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-testutils/: Cargo.toml
plugins/scaffold/skills/scaffold-fullstack/template/crates/app-testutils/src/: builders.rs  fakes.rs  lib.rs
plugins/scaffold/skills/scaffold-fullstack/template/frontend/: index.html  package.json  rollup.config.js
plugins/trust-engineering/: README.md
plugins/trust-engineering/.claude-plugin/: plugin.json
plugins/trust-engineering/.codex-plugin/: plugin.json
(+33 files in other folders)
