[package]
name = "app-api"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
app-core = { path = "../app-core" }
ras-rest-macro.workspace = true
ras-rest-core.workspace = true
ras-auth-core.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
tracing.workspace = true
reqwest.workspace = true

[features]
default = ["server", "client"]
server = []
client = []
