[package]
name = "app-frontend"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
app-core = { path = "../app-core" }
dominator.workspace = true
dwind.workspace = true
futures-signals.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
